# sb3x-extensions

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml
scripts/: __init__.py  compare_minigrid_memory.py
src/sb3x/: __init__.py
src/sb3x/common/: __init__.py  auxiliary_losses.py  entropy.py  metrics.py  recurrent.py
src/sb3x/common/hybrid_action/: spaces.py  (+3 more)
src/sb3x/dqn_boltzmann/: __init__.py  dqn_boltzmann.py
src/sb3x/maskable_recurrent/: __init__.py  maskable_recurrent_ppo.py  policies.py
src/sb3x/ppo_hybrid_action/: __init__.py  distributions.py  policies.py  ppo_hybrid_action.py
src/sb3x/ppo_hybrid_recurrent/: __init__.py  policies.py  ppo_hybrid_recurrent.py
src/sb3x/ppo_mask_hybrid_action/: __init__.py  buffers.py  distributions.py  policies.py  ppo_mask_hybrid_action.py
src/sb3x/ppo_mask_hybrid_recurrent/: __init__.py  policies.py  ppo_mask_hybrid_recurrent.py
src/sb3x/ppo_mask_recurrent/: __init__.py  base_policy.py  buffers.py  policies.py  ppo_mask_recurrent.py  type_aliases.py
src/sb3x/sac_discrete/: __init__.py  actor.py  critic.py  policies.py  sac_discrete.py
src/sb3x/sac_hybrid_action/: __init__.py  encoding.py  policies.py  sac_hybrid_action.py
tests/: conftest.py  test_boltzmann_dqn.py  test_discrete_sac.py  test_entropy.py  test_hybrid_action_ppo.py  test_hybrid_action_sac.py  test_hybrid_recurrent_ppo.py  test_imports.py  test_maskable_hybrid_action_ppo.py  test_maskable_hybrid_action_sac.py  test_maskable_hybrid_recurrent_ppo.py  test_maskable_recurrent_masks.py  test_minigrid_benchmark.py  test_minigrid_recurrent_ppo.py  test_minigrid_runs.py  test_minigrid_watch.py
tools/: __init__.py
tools/minigrid_memory/: __init__.py  models.py  runs.py  support.py  train.py  watch.py
(+9 files in other folders)
