[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sb3x"
version = "0.1.0"
description = "Unofficial extensions for Stable-Baselines3 and sb3-contrib."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["reinforcement-learning", "stable-baselines3", "sb3", "sb3-contrib"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "stable-baselines3",
    "sb3-contrib",
]

[project.optional-dependencies]
dev = [
    "build",
    "minigrid",
    "pyright",
    "pytest",
    "rich",
    "ruff",
    "tensorboard",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/jiecovic/sb3x-extensions"
Issues = "https://github.com/jiecovic/sb3x-extensions/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sb3x = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests", "scripts", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests", "scripts", "tools"]
typeCheckingMode = "basic"
